// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`bar.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export type Foo = { x: number; }

=====================================output=====================================
export type Foo = { x: number };

================================================================================
`;

exports[`foo.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export type Foo = { x: number; }

=====================================output=====================================
export type Foo = { x: number };

================================================================================
`;

exports[`qux.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
import type { Foo } from './bar.js';
({ x: "" }: Foo);

=====================================output=====================================
import type { Foo } from "./bar.js";
({ x: "" }: Foo);

================================================================================
`;
